# squid-tui

./: .gitignore  README.md  lint.sh  pyproject.toml  unittest.sh
.github/workflows/: ci.yml  main.yml
examples/: demo.py
python/squidlib/: __init__.py  app.py  constants.py  screens.py  slurm.py  widgets.py
python/squidlib/cli/: cli_main.py
tests/: test_app_logic.py  test_cli.py  test_constants.py  test_slurm.py
