# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squid-tui"
version = "0.0.4"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "slurm",
    "tui",
    "hpc",
    "cluster"
]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "textual>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/pirl-unc/squid-tui"
Repository = "https://github.com/pirl-unc/squid-tui"
Issues = "https://github.com/pirl-unc/squid-tui/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10.0",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
squid-tui = "squidlib.cli.cli_main:run"
